# Dropout-models-uncertainty

./: .gitignore  README.md  pyproject.toml
Notebooks/: Morph function.ipynb
mlruns/0/: meta.yaml
mlruns/488034839311860916/: meta.yaml
mlruns/488034839311860916/04a01847343a4fdfb0f510f5f9377375/: meta.yaml
mlruns/488034839311860916/04af3f55ad7d4d3089262fba9256ae1e/: meta.yaml
mlruns/488034839311860916/0a3d5023f0ee414baffd3af8035b157d/: meta.yaml
mlruns/488034839311860916/0b1cbcaa0859448290629f33112c1f13/: meta.yaml
mlruns/488034839311860916/0cd2f755384b422b9410df48514722c4/: meta.yaml
mlruns/488034839311860916/0ff1f535ef604d5587eae98b1b64dc99/: meta.yaml
mlruns/488034839311860916/10cb4730601445598e15b1036f903a88/: meta.yaml
mlruns/488034839311860916/11aa76c92a064a10aa1ede5068a573ec/: meta.yaml
mlruns/488034839311860916/15c629ace9854f0f8c97b406c3d25f37/: meta.yaml
mlruns/488034839311860916/1af019557dcb4066b45ad1fda1ba0643/: meta.yaml
mlruns/488034839311860916/1c3774c415b7486bb6a6199898f617a3/: meta.yaml
mlruns/488034839311860916/241074268a3c42cab5c2f108c52bf23a/: meta.yaml
mlruns/488034839311860916/24d1c524d30b4fd490279e8a9a474195/: meta.yaml
mlruns/488034839311860916/29b3520eb8314465a81637377bf6822a/: meta.yaml
mlruns/488034839311860916/2ae0d8086b31425191982c8ad1076713/: meta.yaml
models/: model2.pt
params/: params_template.json
src/: README.md  convnet.py  dataset.py  densenet.py  helpers.py  hiperparameters.py  plot_uncertainty.py  plots.py  track_model_training.py  train.py  train_loop.py  visualizations.py
(+649 files in other folders)
